--- a/.dockerignore
+++ b/.dockerignore
@@ -3,3 +3,26 @@
 build/_workspace
 build/_bin
 tests/testdata
+*.md
+*.yml
+*.txt
+*.key
+*.json
+*.git
+*.github
+*.gitignore
+*.gitattributes
+.golangci.yml
+.gitmodules
+Dockerfile
+Dockerfile.alltools
+appveyor.yml
+circle.yml
+Jenkinsfile
+.travis.yml
+CODESHELTER.md
+COPYING
+COPYING.LESSER
+README.md
+bootnode.key
+oss-fuzz.sh
